Fix Android-compatible manifest reading